--- a/src/Pages/ItemList/ListBox/Item/Item.scss
+++ b/src/Pages/ItemList/ListBox/Item/Item.scss
@@ -78,6 +78,10 @@
           border-radius: 50%;
           background-color: white;
           @include flex(center, center, null);
+          .detailView {
+            color: #8f8f8f;
+            font-size: 20px;
+          }
         }
       }
     }
@@ -128,379 +132,6 @@
       margin-top: 20px;
       font-size: 12px;
       line-height: 13px;
-
-      .review {
-        color: #8f8f8f;
-        margin-right: 4px;
-      }
-
-      .grade {
-        position: relative;
-        color: #8f8f8f;
-        margin-left: 14px;
-        margin-right: 4px;
-
-        &::after {
-          //before이 아니라 after로 했을때 생기는지 의문..
-          position: absolute;
-          top: 50%;
-          left: -8px;
-          width: 2px;
-          height: 2px;
-          margin-top: -1px;
-          background-color: #d8d8d8;
-          content: '';
-        }
-      }
-
-      .value {
-        color: #6b90dc;
-      }
-
-      .slash {
-        color: #8f8f8f;
-        margin: auto 1px;
-      }
-    }
-
-    .soldout {
-      margin-top: 16px;
-      font-size: 12px;
-      line-height: 18px;
-      font-weight: bold;
-      height: 21px;
-      width: 64px;
-
-      div {
-        margin: auto auto;
-        color: white;
-        font-size: 9px;
-        font-weight: bold;
-        background-color: #535967;
-        text-align: center;
-      }
-    }
-
-    &:hover .imageButtonBox {
-      opacity: 100%;
-    }
-  }
-
-  .bigItemBox {
-    //큰이미지로 보기했을때 보여줄 디자인
-    @include flex(center, null, column);
-    width: 327px; //
-    padding: 0 18px; //
-    margin: 20px 0;
-
-    .clickBox {
-      cursor: pointer;
-    }
-
-    .image {
-      width: 293px; //
-      height: 380px; //
-      position: relative;
-      overflow: hidden; //
-
-      img {
-        object-fit: cover;
-        height: 380px;
-      }
-
-      .imageButtonBox {
-        position: absolute;
-        top: 311px; //체크
-        padding: 0;
-        margin-left: -54px;
-        left: 50%;
-        z-index: 1;
-        opacity: 0%;
-        transition: opacity 0.8s;
-        @include flex(space-between, center, null);
-
-        .likeButtonBox {
-          cursor: pointer;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: white;
-          @include flex(center, center, null);
-
-          .imageInnerLike {
-            cursor: pointer;
-            width: 21px;
-            height: 19px;
-            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
-              no-repeat;
-            background-size: 100% auto;
-            content: '';
-          }
-        }
-
-        .likeCheckedButtonBox {
-          cursor: pointer;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: #f54c4a;
-          @include flex(center, center, null);
-
-          .likeChecked {
-            cursor: pointer;
-            width: 21px;
-            height: 19px;
-            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200918175251/media/icon_heart_15x13_white.a891e718.svg)
-              no-repeat;
-            background-size: 100% auto;
-            content: '';
-          }
-        }
-
-        .viewButtonBox {
-          cursor: pointer;
-          margin-left: 8px;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: white;
-          @include flex(center, center, null);
-        }
-      }
-    }
-
-    .itemName {
-      @include flex(space-between, center, null);
-      margin-top: 14px;
-
-      #name {
-        font-size: 13px;
-        line-height: 16px;
-        font-weight: bold;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 256px;
-      }
-
-      .like {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
-        background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
-          no-repeat;
-        background-position: auto;
-      }
-      .smallLikeChecked {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
-        background: url(https://img-shop.pstatic.net/smartstore/p/static/20200916190316/media/icon_heart_15x13_red.7c83f183.svg)
-          no-repeat;
-        background-position: auto;
-      }
-    }
-
-    .itemPrice {
-      margin-top: 3px;
-
-      #price {
-        font-size: 13px;
-        line-height: 17px;
-        font-weight: bold;
-      }
-    }
-
-    .reviewGrade {
-      margin-top: 20px;
-      font-size: 12px;
-      line-height: 13px;
-
-      .review {
-        color: #8f8f8f;
-        margin-right: 4px;
-      }
-
-      .grade {
-        position: relative;
-        color: #8f8f8f;
-        margin-left: 14px;
-        margin-right: 4px;
-
-        &::after {
-          //before이 아니라 after로 했을때 생기는지 의문..
-          position: absolute;
-          top: 50%;
-          left: -8px;
-          width: 2px;
-          height: 2px;
-          margin-top: -1px;
-          background-color: #d8d8d8;
-          content: '';
-        }
-      }
-
-      .value {
-        color: #6b90dc;
-      }
-
-      .slash {
-        color: #8f8f8f;
-        margin: auto 1px;
-      }
-    }
-
-    .soldout {
-      margin-top: 16px;
-      font-size: 12px;
-      line-height: 18px;
-      font-weight: bold;
-      height: 21px;
-      width: 64px;
-
-      div {
-        margin: auto auto;
-        color: white;
-        font-size: 9px;
-        font-weight: bold;
-        background-color: #535967;
-        text-align: center;
-      }
-    }
-
-    &:hover .imageButtonBox {
-      opacity: 100%;
-    }
-  }
-
-  .galleryItemBox {
-    //갤러리뷰로 보기했을때 보여줄 디자인
-    @include flex(center, center, column);
-    width: 677px;
-    padding: 0 15px;
-    margin: 20px 0;
-
-    .clickBox {
-      cursor: pointer;
-    }
-
-    .image {
-      width: 602px;
-      height: 602px;
-      position: relative;
-
-      img {
-        width: 100%;
-      }
-
-      .imageButtonBox {
-        position: absolute;
-        top: 502px; //
-        padding: 0;
-        margin-left: -54px;
-        left: 50%;
-        z-index: 1;
-        opacity: 0%;
-        transition: opacity 0.8s;
-        @include flex(space-between, center, null);
-
-        .likeButtonBox {
-          cursor: pointer;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: white;
-          @include flex(center, center, null);
-
-          .imageInnerLike {
-            cursor: pointer;
-            width: 21px;
-            height: 19px;
-            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
-              no-repeat;
-            background-size: 100% auto;
-            content: '';
-          }
-        }
-
-        .likeCheckedButtonBox {
-          cursor: pointer;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: #f54c4a;
-          @include flex(center, center, null);
-
-          .likeChecked {
-            cursor: pointer;
-            width: 21px;
-            height: 19px;
-            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200918175251/media/icon_heart_15x13_white.a891e718.svg)
-              no-repeat;
-            background-size: 100% auto;
-            content: '';
-          }
-        }
-
-        .viewButtonBox {
-          cursor: pointer;
-          margin-left: 8px;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          background-color: white;
-          @include flex(center, center, null);
-        }
-      }
-    }
-
-    .itemName {
-      @include flex(space-between, center, null);
-      margin-top: 14px;
-
-      #name {
-        font-size: 20px; //
-        line-height: 28px; //
-        font-weight: bold;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        padding-right: 16px;
-      }
-
-      .like {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
-        background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
-          no-repeat;
-        background-position: auto;
-      }
-      .smallLikeChecked {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
-        background: url(https://img-shop.pstatic.net/smartstore/p/static/20200916190316/media/icon_heart_15x13_red.7c83f183.svg)
-          no-repeat;
-        background-position: auto;
-      }
-    }
-
-    .itemPrice {
-      margin-top: 3px;
-
-      #price {
-        font-size: 20px; //
-        line-height: 28px; //
-        font-weight: bold;
-      }
-    }
-
-    .reviewGrade {
-      margin-top: 20px;
-      font-size: 12px;
-      line-height: 13px;
-      margin-left: -500px; //
 
       .review {
         color: #8f8f8f;
