--- a/src/Pages/ItemDetail/Components/DetailViewNav/DetailViewNav.scss
+++ b/src/Pages/ItemDetail/Components/DetailViewNav/DetailViewNav.scss
@@ -7,8 +7,9 @@
     left: 0;
     display: none;
     width: 100%;
-    padding: 0;
+    padding-top: 14px;
     background: #fff;
+    border-bottom: 1px solid #aaa;
     z-index: 9999;
 
     &.isActive {
@@ -33,138 +34,170 @@
       cursor: pointer;
     }
 
-    .menuTop {
-      width: 100%;
-      padding: 14px 0;
-      border-bottom: 1px solid #aaa;
+    > .inner {
+      @include flex(space-between);
+      width: 1020px;
+      margin: 0 auto;
+    }
 
-      > .inner {
-        @include flex(space-between);
-        width: 1020px;
-        margin: 0 auto;
+    .product {
+      @include flex(null, center);
+
+      &Photo {
+        width: 46px;
+
+        img {
+          width: 100%;
+        }
       }
 
-      .product {
-        @include flex(null, center);
+      &Info {
+        @include flex(null, null, column);
+        margin-left: 16px;
+      }
 
-        &Photo {
-          width: 46px;
+      &Name {
+        font-size: 14px;
+        padding-bottom: 5px;
+      }
 
-          img {
-            width: 100%;
+      &Price {
+        font-size: 18px;
+        color: #6b90dc;
+      }
+    }
+  }
+
+  .menuBottom {
+    display: none;
+    width: 1020px;
+    min-height: 300px;
+    margin: 12px auto 0;
+    border: 1px solid #ddd;
+    background: #f8f9fa;
+
+    &.isActive {
+      display: flex;
+    }
+
+    > div {
+      flex: 1;
+      padding: 25px;
+      border-right: $lightGrayBorder;
+
+      .inner {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .ship {
+      font-weight: lighter;
+      font-size: 14px;
+      line-height: 24px;
+
+      .inner {
+        height: auto;
+        padding-bottom: 20px;
+        border-bottom: $lightGrayBorder;
+      }
+
+      &Cost {
+        .method {
+          padding-right: 10px;
+          border-right: $lightGrayBorder;
+        }
+
+        .cost {
+          padding-left: 10px;
+          font-weight: bold;
+
+          &::after {
+            content: '(주문시 결제)';
+            color: #6b90dc;
           }
         }
+      }
 
-        &Info {
-          @include flex(null, null, column);
-          margin-left: 16px;
-        }
+      &DiscountItemList {
+        display: block;
+        color: #6b90dc;
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
 
-        &Name {
-          font-size: 14px;
-          padding-bottom: 5px;
-        }
+    .itemOptionChoice {
+      margin: 0 0 26px;
+    }
 
-        &Price {
-          font-size: 18px;
+    .totalItem {
+      @include flex(null, flex-end, column);
+      margin-top: 10px;
+
+      .totalItemCount {
+        color: #aaa;
+        font-size: 14px;
+      }
+
+      .bottom {
+        @include flex(space-between, flex-end);
+        width: 100%;
+        padding: 10px 0;
+
+        .orderPrice {
+          padding-left: 10px;
           color: #6b90dc;
+          font-size: 24px;
+          font-weight: bold;
+
+          span {
+            font-size: 20px;
+          }
         }
       }
     }
 
-    .menuBottom {
-      display: none;
-      width: 1020px;
-      min-height: 300px;
-      margin: 12px auto 0;
-      border: 1px solid #ddd;
-      background: #f8f9fa;
+    .buttonContainer .top .buyButton {
+      width: calc(50% - 1px);
+      height: 50px;
+    }
+  }
+
+  .tabs {
+    @include flex(space-between);
+    width: 1020px;
+    margin: 10px auto -10px;
+
+    .tab {
+      position: relative;
+      flex: 1;
+      padding: 16px 0;
+      background: #efefef;
+      text-align: center;
+      font-size: 14px;
+      cursor: pointer;
+
+      &:not(:last-child) {
+        &::after {
+          content: '';
+          position: absolute;
+          right: 0;
+          top: 50%;
+          height: 14px;
+          border-right: 1px solid #aaa;
+          transform: translateY(-50%);
+        }
+      }
 
       &.isActive {
-        display: flex;
-      }
+        background: #3d3d4f;
+        color: #fff;
 
-      > div {
-        flex: 1;
-        padding: 25px;
-        border-right: $lightGrayBorder;
-
-        .inner {
-          width: 100%;
-          height: 100%;
+        &::after {
+          content: '';
+          border-right: 0;
         }
-      }
-
-      .ship {
-        font-weight: lighter;
-        font-size: 14px;
-        line-height: 24px;
-
-        .inner {
-          height: auto;
-          padding-bottom: 20px;
-          border-bottom: $lightGrayBorder;
-        }
-
-        &Cost {
-          .method {
-            padding-right: 10px;
-            border-right: $lightGrayBorder;
-          }
-
-          .cost {
-            padding-left: 10px;
-            font-weight: bold;
-
-            &::after {
-              content: '(주문시 결제)';
-              color: #6b90dc;
-            }
-          }
-        }
-
-        &DiscountItemList {
-          display: block;
-          color: #6b90dc;
-          text-decoration: underline;
-          cursor: pointer;
-        }
-      }
-
-      .itemOptionChoice {
-        margin: 0 0 26px;
-      }
-
-      .totalItem {
-        @include flex(null, flex-end, column);
-        margin-top: 10px;
-
-        .totalItemCount {
-          color: #aaa;
-          font-size: 14px;
-        }
-
-        .bottom {
-          @include flex(space-between, flex-end);
-          width: 100%;
-          padding: 10px 0;
-
-          .orderPrice {
-            padding-left: 10px;
-            color: #6b90dc;
-            font-size: 24px;
-            font-weight: bold;
-
-            span {
-              font-size: 20px;
-            }
-          }
-        }
-      }
-
-      .buttonContainer .top .buyButton {
-        width: calc(50% - 1px);
-        height: 50px;
       }
     }
   }
