--- a/src/Pages/ItemList/Filter/ViewCountButton/ViewCountButton.scss
+++ b/src/Pages/ItemList/Filter/ViewCountButton/ViewCountButton.scss
@@ -1,64 +1,56 @@
 @import '../../../../Styles/common.scss';
 
 .itemListContainer {
-  .selectContainer {
-    margin: 0 43px 0 5px;
+  .viewCountButtonContainer {
     position: relative;
     @include flex(center, flex-end, row);
+    margin: 0 43px 0 5px;
 
     .selectedView {
       @include flex(space-between, flex-end, row);
 
+      .defaultUp,
       .defaultDown {
+        position: relative;
         top: 3px;
-        cursor: pointer;
         text-align: end;
         font-size: 12px;
         line-height: 27px;
-        position: relative;
+        cursor: pointer;
+
         &::after {
-          cursor: pointer;
           position: absolute;
           top: 12px;
           left: 79px;
           display: block;
           border: 5px solid transparent;
-          border-bottom: none;
-          border-top-color: #000;
           content: '';
+          cursor: pointer;
         }
       }
-      .defaultUp {
-        top: 3px;
-        cursor: pointer;
-        text-align: end;
-        font-size: 12px;
-        line-height: 27px;
-        position: relative;
-        &::after {
-          cursor: pointer;
-          position: absolute;
-          top: 12px;
-          left: 79px;
-          display: block;
-          border: 5px solid transparent;
-          border-top: none;
-          border-bottom-color: #000;
-          content: '';
-        }
+
+      .defaultDown::after {
+        border-bottom: none;
+        border-top-color: #000;
+      }
+
+      .defaultUp::after {
+        border-top: none;
+        border-bottom-color: #000;
       }
     }
+
     .selectOption {
+      position: absolute;
+      z-index: 1;
+      top: 30px;
+      left: -8px;
       width: 100px;
+      padding: 5px 0;
       background-color: white;
       border: 1px solid #e2e2e2;
       font-size: 13px;
       line-height: 29px;
-      position: absolute;
-      padding: 5px 0;
-      z-index: 1;
-      top: 30px;
-      left: -8px;
 
       .select {
         padding: 0 15px;
@@ -72,6 +64,9 @@
         padding: 0 15px;
         width: 100%;
       }
+    }
+    .invisibleSelectOption {
+      display: none;
     }
   }
 }
