--- a/src/Pages/ItemList/ListBox/Item/bigItemBox.scss
+++ b/src/Pages/ItemList/ListBox/Item/bigItemBox.scss
@@ -3,21 +3,20 @@
 
 .itemListContainer {
   .bigItemBox {
-    //큰이미지로 보기했을때 보여줄 디자인
     @include flex(center, null, column);
-    width: 327px; //
-    padding: 0 18px; //
+    width: 327px;
     margin: 20px 0;
+    padding: 0 18px;
 
     .clickBox {
       cursor: pointer;
     }
 
     .image {
-      width: 293px; //
-      height: 380px; //
       position: relative;
-      overflow: hidden; //
+      width: 293px;
+      height: 380px;
+      overflow: hidden;
 
       img {
         object-fit: cover;
@@ -26,61 +25,61 @@
 
       .imageButtonBox {
         position: absolute;
-        top: 311px; //체크
+        @include flex(space-between, center, null);
+        top: 311px;
+        left: 50%;
         padding: 0;
         margin-left: -54px;
-        left: 50%;
         z-index: 1;
         opacity: 0%;
         transition: opacity 0.8s;
-        @include flex(space-between, center, null);
 
         .likeButtonBox {
-          cursor: pointer;
+          @include flex(center, center, null);
           width: 50px;
           height: 50px;
-          border-radius: 50%;
           background-color: white;
-          @include flex(center, center, null);
+          border-radius: 50%;
+          cursor: pointer;
 
           .imageInnerLike {
-            cursor: pointer;
             width: 21px;
             height: 19px;
             background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
               no-repeat;
             background-size: 100% auto;
             content: '';
+            cursor: pointer;
           }
         }
 
         .likeCheckedButtonBox {
-          cursor: pointer;
+          @include flex(center, center, null);
           width: 50px;
           height: 50px;
-          border-radius: 50%;
           background-color: #f54c4a;
-          @include flex(center, center, null);
+          border-radius: 50%;
+          cursor: pointer;
 
           .likeChecked {
-            cursor: pointer;
             width: 21px;
             height: 19px;
             background: url(https://img-shop.pstatic.net/smartstore/p/static/20200918175251/media/icon_heart_15x13_white.a891e718.svg)
               no-repeat;
             background-size: 100% auto;
             content: '';
+            cursor: pointer;
           }
         }
 
         .viewButtonBox {
-          cursor: pointer;
-          margin-left: 8px;
+          @include flex(center, center, null);
           width: 50px;
           height: 50px;
-          border-radius: 50%;
+          margin-left: 8px;
           background-color: white;
-          @include flex(center, center, null);
+          border-radius: 50%;
+          cursor: pointer;
 
           .detailView {
             color: #8f8f8f;
@@ -95,30 +94,31 @@
       margin-top: 14px;
 
       #name {
+        width: 256px;
         font-size: 13px;
-        line-height: 16px;
         font-weight: bold;
+        line-height: 16px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        width: 256px;
+      }
+
+      .like,
+      .smallLikeChecked {
+        width: 17px;
+        height: 14px;
+        background-position: auto;
+        cursor: pointer;
       }
 
       .like {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
         background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
           no-repeat;
-        background-position: auto;
       }
+
       .smallLikeChecked {
-        cursor: pointer;
-        width: 17px;
-        height: 14px;
         background: url(https://img-shop.pstatic.net/smartstore/p/static/20200916190316/media/icon_heart_15x13_red.7c83f183.svg)
           no-repeat;
-        background-position: auto;
       }
     }
 
@@ -138,18 +138,17 @@
       line-height: 13px;
 
       .review {
-        color: #8f8f8f;
         margin-right: 4px;
+        color: #8f8f8f;
       }
 
       .grade {
         position: relative;
-        color: #8f8f8f;
         margin-left: 14px;
         margin-right: 4px;
+        color: #8f8f8f;
 
         &::after {
-          //before이 아니라 after로 했을때 생기는지 의문..
           position: absolute;
           top: 50%;
           left: -8px;
@@ -166,25 +165,25 @@
       }
 
       .slash {
-        color: #8f8f8f;
         margin: auto 1px;
+        color: #8f8f8f;
       }
     }
 
     .soldout {
       margin-top: 16px;
+      width: 64px;
+      height: 21px;
       font-size: 12px;
       line-height: 18px;
       font-weight: bold;
-      height: 21px;
-      width: 64px;
 
       div {
         margin: auto auto;
         color: white;
+        background-color: #535967;
         font-size: 9px;
         font-weight: bold;
-        background-color: #535967;
         text-align: center;
       }
     }
