ADD: 아이템 리스트 박스 display flex설정 수정

--- a/src/Pages/ItemList/ListBox/ListBox.scss
+++ b/src/Pages/ItemList/ListBox/ListBox.scss
@@ -1,7 +1,21 @@
 @import '../../../Styles/common.scss';
 .itemListContainer {
-  .listBox {
+  .listItemBoxContainer {
     @include flex(center, null, row);
+    padding-left: 70px;
+  }
+  .itemBoxContainer,
+  .bigItemBoxContainer {
+    @include flex(center, null, row);
+    padding-left: 45px;
+  }
+
+  .galleryItemBoxContainer {
+    @include flex(center, null, row);
+  }
+
+  .listBox {
+    @include flex(null, null, row);
     flex-wrap: wrap;
     padding: 0 10px 50px;
     list-style: none;
