Refactor : 멘토 리뷰 반영

--- a/src/Pages/Main/MainGoToCategory/MainGoToCategory.scss
+++ b/src/Pages/Main/MainGoToCategory/MainGoToCategory.scss
@@ -26,6 +26,7 @@
       width: 327px;
       height: 362.44px;
       padding: 0px 14px 0px;
+      list-style-type: none;
       cursor: pointer;
 
       img {
