--- a/src/Pages/Main/MainCeramicAdvertisingBanner/MainCeramicAdvertisingBanner.scss
+++ b/src/Pages/Main/MainCeramicAdvertisingBanner/MainCeramicAdvertisingBanner.scss
@@ -150,6 +150,10 @@
         top: -40px;
       }
 
+      li {
+        list-style-type: none;
+      }
+
       .wrapContentPictures {
         width: 484.8px;
         height: 304px;
