--- a/src/Pages/SignIn/SignIn.scss
+++ b/src/Pages/SignIn/SignIn.scss
@@ -33,30 +33,14 @@ main {
         height: 60px;
         background-image: url('https://static.nid.naver.com/images/ui/login/t_sp_login_190522.png');
         background-position: -150px -90px;
-        padding: 30px 0 30px 0px;
+        padding: 30px 0;
       }
     }
 
     .signInInput {
       display: inline-block;
 
-      .signInIdInput {
-        display: flex;
-        width: 460px;
-        height: 50px;
-        margin-left: 25px;
-        padding: 7px 35 10px 11px;
-        border: 1px solid #dadada;
-        background-color: white;
-        &:focus {
-          border: 1px solid #03c75a;
-        }
-        &.isActive {
-          border: 1px solid #03c75a;
-          padding: 0 0 0 15px;
-        }
-      }
-
+      .signInIdInput,
       .signInPwdInput {
         display: flex;
         width: 460px;
@@ -82,6 +66,7 @@ main {
       background-color: #03c75a;
       color: white;
       font-size: 16px;
+      cursor: pointer;
     }
 
     .signInOption {
