--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -31,13 +31,25 @@
       .signUpIdText {
         display: block;
       }
-
-      .signUpIdInput {
+      .signUpIdBorder {
+        display: flex;
         width: 460px;
         height: 51px;
         margin: 15px 0 15px 0;
         border: 1px solid #dadada;
         background-color: white;
+
+        .signUpIdInput {
+          width: 370px;
+          height: 49px;
+          margin-left: 5px;
+        }
+        .naverEmail {
+          color: #8e8e8e;
+          margin: auto;
+          margin-right: 10px;
+          font-weight: lighter;
+        }
       }
     }
 
@@ -46,12 +58,48 @@
         display: block;
       }
 
-      .signUpPwdInput {
+      .signUpPwdInputBorder {
+        position: relative;
+        display: flex;
         width: 460px;
         height: 51px;
         margin: 15px 0 15px 0;
         border: 1px solid #dadada;
         background-color: white;
+        .signUpPwdInput {
+          width: 370px;
+          height: 49px;
+          margin-left: 5px;
+        }
+        .pwdSecurityContainer {
+          display: flex;
+          .pwdSecurityText {
+            position: relative;
+            width: 70px;
+            margin: 23px 5px;
+            padding-left: 15px;
+            color: #03c75a;
+            font-size: 13px;
+            &.check {
+              display: none;
+            }
+          }
+
+          .pwdSecurity {
+            position: absolute;
+            right: 0;
+            width: 13px;
+            height: 30px;
+            background-image: url('https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png');
+            background-position: -50px -67px;
+            background-size: 120px;
+            padding: 7px 7px 7px 20px;
+            margin: 10px 10px 10px 50px;
+            &.check {
+              background-position: 0px -67px;
+            }
+          }
+        }
       }
     }
 
@@ -59,13 +107,32 @@
       .signUpPwdTextRepeat {
         display: block;
       }
-
-      .signUpPwdCheck {
+      .signUpRepeatPwdBorder {
+        display: flex;
         width: 460px;
         height: 51px;
         margin: 15px 0 15px 0;
         border: 1px solid #dadada;
         background-color: white;
+
+        .signUpPwdCheck {
+          width: 370px;
+          height: 49px;
+          margin-left: 5px;
+        }
+
+        .pwdRepeatSecurity {
+          width: 13px;
+          height: 30px;
+          background-image: url('https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png');
+          background-position: -77px -67px;
+          background-size: 120px;
+          padding: 7px 7px 7px 20px;
+          margin: 10px 0 10px 50px;
+          &.check {
+            background-position: -25px -67px;
+          }
+        }
       }
     }
 
@@ -187,6 +254,43 @@
       font-size: 13px;
       text-align: left;
       margin-bottom: 20px;
+    }
+  }
+
+  .footerInfo {
+    text-align: center;
+    margin: 30px;
+
+    .termsCondition {
+      font-size: 12px;
+      margin-top: 25px;
+      font-weight: normal;
+      strong {
+        font-weight: bold;
+      }
+    }
+    .corpInfo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+      .smallLogo {
+        width: 80px;
+        height: 13px;
+        background-image: url('https://static.nid.naver.com/images/ui/login/t_sp_login_190522.png');
+        background-position: -230px 4px;
+        background-size: 460px;
+        text-align: center;
+        padding: 10px;
+      }
+      .copyright {
+        margin-top: 3px;
+        font-size: 12px;
+        font-weight: normal;
+        strong {
+          font-weight: bold;
+        }
+      }
     }
   }
 }
