--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -49,7 +49,9 @@
         height: 15px;
         background-image: url('https://ssl.pstatic.net/static/common/gnb/one/sp_gnb_v15.png?v=2006)%20no-repeat%20-999px%20-999px');
         background-position: -60px 0px;
-        margin: 4px, 16px, 0px, 50px;
+        padding: 10px;
+        margin-top: 4px;
+        margin-left: 10px;
       }
     }
   }
