Add: 리뷰 작성 및 추가 기능 구현 - 리뷰 작성 시 유효성 검사 (한 글자 이상) - 리뷰 추가 시 form reset

--- a/src/Pages/ItemDetail/Components/InformationTab/Reviews/Reviews.scss
+++ b/src/Pages/ItemDetail/Components/InformationTab/Reviews/Reviews.scss
@@ -12,6 +12,17 @@
 
     .inner {
       @include flex(space-between, center);
+      cursor: pointer;
+
+      &.isActive {
+        @include flex(null, flex-start, column);
+        background: #fefefe;
+
+        .photo {
+          min-width: 300px;
+          margin-top: 30px;
+        }
+      }
 
       .userImage {
         align-self: start;
@@ -34,6 +45,10 @@
 
       .review {
         font-size: 12px;
+      }
+
+      .rating {
+        font-weight: bold;
       }
     }
   }
