--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -4,22 +4,74 @@
 .Main {
   font-family: $notoSans;
 
-  img {
-    width: 100%;
-    height: 744px;
+  .firstSlide {
+    .title {
+      position: relative;
+      font-size: 50px;
+      left: 150px;
+      bottom: 500px;
+      color: white;
+      //z-index: 8;
+    }
+
+    .subTitle {
+      position: relative;
+      font-size: 15px;
+      left: 150px;
+      bottom: 480px;
+      color: white;
+    }
+  }
+
+  .secondSlide {
+    .title {
+      position: relative;
+      font-size: 50px;
+      left: 150px;
+      bottom: 500px;
+      color: black;
+    }
+
+    .subTitle {
+      position: relative;
+      font-size: 15px;
+      left: 150px;
+      bottom: 480px;
+      color: black;
+    }
   }
 
   .slide {
     .slick-prev {
-      left: 3%;
-      z-index: 1;
+      left: 27px;
+      top: 50%;
+      z-index: 5;
     }
     .slick-next {
-      right: 3%;
-      z-index: 1;
+      right: 65px;
+      top: 50%;
+      z-index: 5;
+    }
+    .slick-prev:before {
+      background: url('https://t1.kakaocdn.net/friends/new_store/2.0/pc/arrow-left.png')
+        center center / 10px no-repeat;
+    }
+    .slick-next:before {
+      background: url('https://t1.kakaocdn.net/friends/new_store/2.0/pc/arrow-right.png')
+        center center / 10px no-repeat;
+    }
+    .slick-prev:before,
+    .slick-next:before {
+      content: '';
+      background-size: contain;
+      width: 25px;
+      height: 25px;
+      z-index: 10;
+      display: block;
     }
     .slick-dots {
-      margin-bottom: 50px;
+      margin-bottom: 100px;
+      z-index: 20;
     }
   }
 }
