--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -3,9 +3,10 @@
 .Footer {
   width: 100%;
   padding-bottom: 100px;
+  background: #fafafa;
 
   .inner {
-    width: 1410px;
+    width: 1280px;
     margin: 0 auto;
   }
 
