--- a/src/Pages/ItemDetail/ItemDetail.scss
+++ b/src/Pages/ItemDetail/ItemDetail.scss
@@ -4,6 +4,12 @@
   width: 1020px;
   margin: 0 auto;
   font-family: $notoSans;
+  background: #fff;
+
+  .navContainer {
+    width: 100%;
+    margin: 0 auto;
+  }
 
   .detailMain {
     display: flex;
