--- a/src/Pages/ItemList/ItemList.scss
+++ b/src/Pages/ItemList/ItemList.scss
@@ -1,10 +1,15 @@
 @import '../../Styles/common.scss';
 @import '../../Styles/reset.scss';
 
+.itemListNav {
+  padding-bottom: 8px;
+  border-bottom: 1px solid #e2e2e2;
+}
+
 .itemListContainer {
   @include flex(center, center, column);
   width: 1325px;
-  margin: 256px auto;
+  margin: 20px auto 150px;
 
   .itemListCategory {
     position: relative;
