Add: 동적 라우팅으로 ItemList 페이지와 연결

--- a/src/Pages/ItemDetail/ItemDetail.scss
+++ b/src/Pages/ItemDetail/ItemDetail.scss
@@ -1,15 +1,15 @@
 @import '../../Styles/common.scss';
 
+.itemDetailNav {
+  padding-bottom: 8px;
+  border-bottom: 1px solid #e2e2e2;
+}
+
 .ItemDetail {
   width: 1020px;
-  margin: 0 auto;
+  margin: 30px auto 0;
   font-family: $notoSans;
   background: #fff;
-
-  .navContainer {
-    width: 100%;
-    margin: 0 auto;
-  }
 
   .detailMain {
     display: flex;
