--- a/src/Styles/reset.scss
+++ b/src/Styles/reset.scss
@@ -1,10 +1,6 @@
+@import './common.scss';
 * {
   box-sizing: border-box;
-}
-html,
-body {
-  width: 100%;
-  height: 100%;
 }
 a {
   text-decoration: none;
@@ -142,4 +138,10 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: $notoSans;
 }
